@@ -39,6 +39,7 @@ class TestRecentlyModifiedGet(IntegrationTestCase, ResolveTestHelper):
             {'checked_out': [],
              'recently_touched': [{
                  'icon_class': 'icon-docx',
+                 'is_subdossier': None,
                  'description': u'Wichtige Vertr\xe4ge',
                  # Because of an incorrect timezone handling in the freezer
                  # last_touched should be `2018-04-30T00:00:00+02:00`
@@ -68,6 +69,7 @@ class TestRecentlyModifiedGet(IntegrationTestCase, ResolveTestHelper):
         self.assertEquals(
             {'checked_out': [{
                 'icon_class': 'icon-docx is-checked-out-by-current-user',
+                'is_subdossier': None,
                 'description': u'Wichtige Vertr\xe4ge',
                 'last_touched': '2018-04-30T00:00:00+02:00',
                 'title': u'Vertr\xe4gsentwurf',
@@ -96,6 +98,7 @@ class TestRecentlyModifiedGet(IntegrationTestCase, ResolveTestHelper):
         self.assertEquals(
             {'checked_out': [{
                 'icon_class': 'icon-docx is-checked-out-by-current-user',
+                'is_subdossier': None,
                 'description': u'Wichtige Vertr\xe4ge',
                 'checked_out': self.regular_user.id,
                 'filename': 'Vertraegsentwurf.docx',
@@ -135,6 +138,7 @@ class TestRecentlyModifiedGet(IntegrationTestCase, ResolveTestHelper):
             {'checked_out': [],
              'recently_touched': [{
                  'icon_class': 'icon-docx is-checked-out',
+                 'is_subdossier': None,
                  'description': u'Wichtige Vertr\xe4ge',
                  # Because of an incorrect timezone handling in the freezer
                  # last_touched should be `2018-04-30T00:00:00+02:00`
@@ -169,6 +173,7 @@ class TestRecentlyModifiedGet(IntegrationTestCase, ResolveTestHelper):
         self.assertEquals(
             {'checked_out': [{
                 'icon_class': 'icon-docx is-checked-out-by-current-user',
+                'is_subdossier': None,
                 'description': u'Wichtige Vertr\xe4ge',
                 'last_touched': '2018-04-30T00:00:00+02:00',
                 'title': u'Vertr\xe4gsentwurf',
