@@ -30,6 +30,7 @@ class TestRepositoryAPI(IntegrationTestCase):
                     u'@id': u'http://nohost/plone/ordnungssystem/fuhrung',
                     u'@type': u'opengever.repository.repositoryfolder',
                     u'description': u'Alles zum Thema F\xfchrung.',
+                    u'is_subdossier': None,
                     u'review_state': u'repositoryfolder-state-active',
                     u'title': None,
                 },
@@ -37,6 +38,7 @@ class TestRepositoryAPI(IntegrationTestCase):
                     u'@id': u'http://nohost/plone/ordnungssystem/rechnungsprufungskommission',
                     u'@type': u'opengever.repository.repositoryfolder',
                     u'description': u'',
+                    u'is_subdossier': None,
                     u'review_state': u'repositoryfolder-state-active',
                     u'title': None,
                 },
@@ -44,6 +46,7 @@ class TestRepositoryAPI(IntegrationTestCase):
                     u'@id': u'http://nohost/plone/ordnungssystem/spinnannetzregistrar',
                     u'@type': u'opengever.repository.repositoryfolder',
                     u'description': u'',
+                    u'is_subdossier': None,
                     u'review_state': u'repositoryfolder-state-inactive',
                     u'title': None,
                 },
