@@ -133,7 +133,7 @@ class TestSearchEndpoint(IntegrationTestCase):
 
         items = browser.json['items']
         self.assertItemsEqual(
-            [u'@id', u'@type', u'title', u'description', u'review_state',
+            [u'@id', u'@type', u'title', u'description', u'is_subdossier', u'review_state',
              u'preview_image_url', u'preview_pdf_url'],
             items[0].keys())
 
