@@ -110,6 +110,7 @@ class TestGeverJSONSummarySerializer(IntegrationTestCase):
                 u'creator': u'robert.ziegler',
                 u'filename': u'Vertraegsentwurf.docx',
                 u'filesize': 27413,
+                u'is_subdossier': None,
                 u'mimetype': u'application/vnd.openxmlformats-officedocument.'
                 u'wordprocessingml.document',
                 u'description': u'Wichtige Vertr\xe4ge',
@@ -132,6 +133,7 @@ class TestGeverJSONSummarySerializer(IntegrationTestCase):
                 u'@id': u'http://nohost/plone/ordnungssystem/fuhrung/vertrage-und-vereinbarungen/dossier-1/document-14',
                 u'@type': u'opengever.document.document',
                 u'description': u'Wichtige Vertr\xe4ge',
+                u'is_subdossier': None,
                 u'review_state': u'document-state-draft',
                 u'title': u'Vertr\xe4gsentwurf',
                 u'reference_number': u'Client1 1.1 / 1 / 14',
@@ -156,7 +158,8 @@ class TestGeverJSONSummarySerializer(IntegrationTestCase):
              u'review_state': u'task-state-in-progress',
              u'title': u'Vertragsentwurf \xdcberpr\xfcfen',
              u'filename': None,
-             u'filesize': None}, summary)
+             u'filesize': None,
+             u'is_subdossier': None}, summary)
 
     @browsing
     def test_summary_with_is_locked_on_tasks_containing_documents(self, browser):
